# EcsSerializer

./: .gitignore  .gitmodules  CMakeLists.txt  EcsSerializer.sln  README.md
EcsSerializer/: EcsSerializer.vcxproj  EcsSerializer.vcxproj.filters
EcsSerializer/src/: Component.h  ComponentFactory.cpp  ComponentFactory.h  EngineComponents.h  Entity.cpp  Entity.h  World.cpp  World.h
SerializerDemo/: SerializerDemo.vcxproj  nlohmann_data.json
SerializerDemo/src/: Main.cpp
examples/: CMakeLists.txt
include/EcsSerializer/: Component.h  EngineComponents.h
